--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@
 /Assets/Toolkit/
 /Assets/TextMeshPro/
 /Assets/Art/
+/Assets/Plugins
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
