--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@
 /Assets/TextMeshPro/
 /Assets/Art/
 /Assets/Plugins
+#Specific for this project only 
+/Assets/BOKI
+/Assets/FRee Food Pack/
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
